# sdl3gs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bash_get_sdl.sh  cball.cpp  cball.h  cbox.cpp  cbox.h  ccircle.cpp  ccircle.h  ceng.cpp  ceng.h  cfont.cpp  cfont.h  clabel.cpp  clabel.h  constants.h  cpaddle.cpp  cpaddle.h  crenderer.cpp  crenderer.h  cscene.cpp  cscene.h  cscores.cpp  cscores.h  cwidget.cpp  cwidget.h  cwindow.cpp  cwindow.h  demo.cpp  get_sdl_libs.sh  peer_demo.cpp  ps1_get_sdl.ps1  udpns.cpp  udpns.h
